--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="https://www.amazon.in/Sapiens-Humankind-Yuval-Noah-Harari/dp/0099590085">Buy on Amazon</a>
            <p><a href="#top">Back to Top</a></p>
     </section>
-    <h4>Muralashetti Devi</h4>
-    <a href=""></a>
+    <h4>Gayathri Devi Jureddi</h4>
+    <a href="https://github.com/GayathriJ4225">git</a>
 </body>
 </html>
